    /home public/private
        - /home public/private set   -- sets a public/private home coord
        - /home public/private tp    -- teleports the player to public/private home coord
        - /home public/private clear -- clears the public/private home coord (SPECIAL WHEN PUBLIC::clears only the home set by the player that ran it OR if the player is OP)
    /antrag
        - /antrag                    -- creates an antrag with the text given as an argument as its contents
        - /antrag delete             -- deletes the antrag with the id given as argument(special is same as /home public clear), (slightly buggy, not fully working with the /antrag special custom created antrag's if you misspelled the username)
        - /antrag list               -- lists all the antarg's if your OP (with ACCEPTED or DENIED) or just your antrag's (with ACCEPTED or DENIED) if ur not OP
        - /antrag accept             -- accepts the antrag with the id given as argument, only runnable by OP's
        - /antrag deny               -- denies the antrag with the id given as argument, only runnable by OP's
        /antrag special
            - /antarg special        -- creates an antrag for the user rpovided as argument, only runnable by OP's
            - /antrag special custom -- creates an antrag for a custom player name provided as argument, only runnable by OP's
    others
        - /randomTickSpeed           -- changes the random tick speed to the given arg, only runnable by OP's
        - /nv                        -- gives @a night vision 255 for infinite amount of seconds, only runnable by OP's
        - /enchantB                  -- works like the vanilla /enchant with the same arguments but the limit of the enchant lvl is 255 and not the default survival limit, only runnable by OP's

INFO:
please notice that for all of the music disks except for "Ne leiche" you have to wait a couple of seconds before the music starts, sorry xD


**
SC = Shapeless Crafting